update content & code part 8

--- a/about.html
+++ b/about.html
@@ -689,7 +689,8 @@
                             </div>
                             <div class="text">
                               <a href="https://medium.com/design-bootcamp/bank-jago-ux-challenge-designing-jago-last-wish-for-better-life-insurance-15e1c9e35511" 
-                              target="_blank" rel="noopener noreferrer" class="title">Bank Jago UX Challenge | Designing “Jago Last Wish” for Better Life Insurance</a>
+                              target="_blank" rel="noopener noreferrer" class="title">[Me] Bank Jago UX Challenge | Designing 
+                              “Jago Last Wish” for Better Life Insurance</a>
                               <ul class="list-unstyled">
                                 <li>18 min read</li>
                                 <li>May 25, 2022</li>
