--- a/blog.html
+++ b/blog.html
@@ -366,19 +366,18 @@
                         <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" class="d-block w-100">
-                                <img src="assets/img/blog/mentorondemand.png" alt="mentorondemand" class="img-fluid w-100">
+                              <a href="https://medium.com/studentwork/ux-writing-case-study-bukalapak-com-e7413c59fd79" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/uxwriting.png" alt="uxwriting" class="img-fluid w-100">
                               </a>
-                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" 
+                              <a href="https://medium.com/studentwork/ux-writing-case-study-bukalapak-com-e7413c59fd79" target="_blank" rel="noopener noreferrer" 
                               class="tags">Case Study</a>
                             </div>
                             <div class="text">
-                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" 
-                              target="_blank" rel="noopener noreferrer" class="title">Designing “Mentor on Demand” for Hire 
-                              the Tutors for You | UI/UX Case Study [Student's Work]</a>
+                              <a href="https://medium.com/studentwork/ux-writing-case-study-bukalapak-com-e7413c59fd79" 
+                              target="_blank" rel="noopener noreferrer" class="title">[Me] UX Writing Case Study | Bukalapak.com</a>
                               <ul class="list-unstyled">
-                                <li>17 min read</li>
-                                <li>Dec 6, 2022</li>
+                                <li>7 min read</li>
+                                <li>May 14, 2021</li>
                               </ul>
                             </div>
                           </div>
@@ -386,19 +385,18 @@
                         <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" class="d-block w-100">
-                                <img src="assets/img/blog/mentorondemand.png" alt="mentorondemand" class="img-fluid w-100">
+                              <a href="https://medium.com/studentwork/ux-writing-case-study-mount-trash-app-fcfc00ebd2f7" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/uxwriting-2.png" alt="uxwriting-2" class="img-fluid w-100">
                               </a>
-                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" 
+                              <a href="https://medium.com/studentwork/ux-writing-case-study-mount-trash-app-fcfc00ebd2f7" target="_blank" rel="noopener noreferrer" 
                               class="tags">Case Study</a>
                             </div>
                             <div class="text">
-                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" 
-                              target="_blank" rel="noopener noreferrer" class="title">Designing “Mentor on Demand” for Hire 
-                              the Tutors for You | UI/UX Case Study [Student's Work]</a>
+                              <a href="https://medium.com/studentwork/ux-writing-case-study-mount-trash-app-fcfc00ebd2f7" 
+                              target="_blank" rel="noopener noreferrer" class="title">[Me] UX Writing Case Study | Mount Trash App</a>
                               <ul class="list-unstyled">
-                                <li>17 min read</li>
-                                <li>Dec 6, 2022</li>
+                                <li>3 min read</li>
+                                <li>May 9, 2021</li>
                               </ul>
                             </div>
                           </div>
@@ -406,19 +404,18 @@
                         <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" class="d-block w-100">
-                                <img src="assets/img/blog/mentorondemand.png" alt="mentorondemand" class="img-fluid w-100">
+                              <a href="https://medium.com/studentwork/case-study-daur-ulang-sampah-kepul-app-redesign-8224bf7356b" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/kepul.png" alt="kepul" class="img-fluid w-100">
                               </a>
-                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" 
+                              <a href="https://medium.com/studentwork/case-study-daur-ulang-sampah-kepul-app-redesign-8224bf7356b" target="_blank" rel="noopener noreferrer" 
                               class="tags">Case Study</a>
                             </div>
                             <div class="text">
-                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" 
-                              target="_blank" rel="noopener noreferrer" class="title">Designing “Mentor on Demand” for Hire 
-                              the Tutors for You | UI/UX Case Study [Student's Work]</a>
+                              <a href="https://medium.com/studentwork/case-study-daur-ulang-sampah-kepul-app-redesign-8224bf7356b" 
+                              target="_blank" rel="noopener noreferrer" class="title">[Me] Case Study (Daur Ulang Sampah) | Kepul App Redesign</a>
                               <ul class="list-unstyled">
-                                <li>17 min read</li>
-                                <li>Dec 6, 2022</li>
+                                <li>8 min read</li>
+                                <li>May 9, 2021</li>
                               </ul>
                             </div>
                           </div>
