update code & content part 9.1

--- a/portfolio-project-1.html
+++ b/portfolio-project-1.html
@@ -1163,13 +1163,20 @@
                            <p>With AI-powered course creation gaining traction, explore premium AI features to enhance monetization 
                             strategies while keeping the core product competitive.
                            </p> 
+                           <div class="main-image" style="margin-bottom: 20px;">
+                            <a href="https://eduqat.com" target="_blank" rel="noopener noreferrer">
+                                <img src="assets/img/ai-course-creation/footer-ai-course.png"
+                                     alt="footer-ai-course"
+                                     class="img-fluid">
+                            </a>
+                        </div>
                     </div>
                   </div>
                 </div>     
-                    <div class="prev-and-next-btn">
-                      <button class="btn btn-prev">Previous</button>
-                      <button class="btn btn-next">Next</button>
-                    </div>
+                <div class="prev-and-next-btn">
+                  <a href="portfolio.html" class="btn btn-prev">Back to Works</a>
+                  <a href="portfolio-project-2.html" class="btn btn-next">Next Project</a>
+                </div>
                   </div>
 
                   <div class="work-together-slider">
