update content & code part 9.2

--- a/portfolio-project-2.html
+++ b/portfolio-project-2.html
@@ -229,7 +229,7 @@
                       companies and institutions. Currently I'm diving into front-end coding ⚙️</p>
                       <div class="common-button-groups">
                         <!-- View CV button -->
-                        <a class="btn btn-call" href="https://drive.google.com/file/d/1GmXUGTA0YTMYciLD2jUOUDU6DdOtXLii/view?usp=sharing" target="_blank">
+                        <a class="btn btn-call" href="https://drive.google.com/file/d/1ZLQMZfrSWHhxLieLMj4o6UBsBB3hd8y0/view?usp=sharing" target="_blank">
                           <svg class="icon" width="25" height="24" viewBox="0 0 25 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <!-- Ikon dokumen sebagai pengganti ikon telepon -->
@@ -310,15 +310,15 @@
                         </div>
                       </div>
                       <div class="overview">
-                        <h4 class="card-title" style="color: #19A2A8;">Eduqat - AI Quiz Creation</h4>
+                        <h4 class="card-title" style="color: #19A2A8;">Eduqat - AI Smart Assignment</h4>
                         
                         <p>
                           <b>My Role:</b> Product Designer & Researcher
 
                         </p>
-                        <p><b>Team Contributor:</b> Head of Product, PM, Product Designer, UIX Designer, UAT, and 
-                          Dev Team.</p>
-                        <p> <b>Project Duration:</b> 3-6 Months</p>
+                        <p><b>Team Contributor:</b> 1 Head of Product, 1 PM, 2 Product Designers, 1 UIX Designer, 2 UATs, and 
+                          4 Devs.</p>
+                        <p> <b>Project Duration:</b> 1-2 Months</p>
                         <p><b>Status:</b> <span style="color: #09bd69;">Development Success</span></p>
                       </div>
                     </div>
@@ -339,80 +339,53 @@
                       </div>
                     </div>
                     <div class="more-info-block">
-                      <h4 class="more-info-title" style="color: #212529;"><b>Project Background</b></h4>
-                      <p>Online education has grown rapidly in recent years, providing greater access for individuals to learn anytime 
-                        and anywhere. However, creating high-quality online courses remains a significant challenge for many individuals 
-                        and educational institutions. This is primarily due to the complexity of course creation, the need for effective 
-                        curriculum design, and the lack of technical expertise in delivering engaging and interactive materials.</p>
-                        <h4 class="card-title">Problems</h4>
+                      <h4 class="more-info-title" style="color: #212529;"><b>Project Overview</b></h4>
+                      <p>After successfully launching the AI-Driven Course Creation project, we encountered a new challenge: many clients 
+                        inquired about Eduqat’s assignment feature and how it could be enhanced. This prompted us to explore 
+                        the integration of AI into our Assignment system. Our goal was to simplify the process for educators—helping them 
+                        create assignments more efficiently, generate grading rubrics seamlessly, and leverage AI-powered assessment 
+                        to evaluate thousands of submissions instantly. By automating these aspects, we aim to reduce manual workload 
+                        and enhance the overall learning experience.</p>
+                        <h4 class="card-title">Problem Statement</h4>
+                        <p>Despite the growing adoption of digital learning platforms, educators and institutions still face significant 
+                          challenges in managing student assignments effectively:</p>
                       <ul class="list-unstyled">
                         <li>
-                          <b>1. Time and Resources:</b> The process of creating courses often takes a long time and requires significant resources. 
-                          From content research to producing materials (text, videos, and quizzes), it can be highly time-consuming.
+                          <b>1. Time-Consuming Assignment Creation:</b> Educators spend substantial time structuring assignments and defining grading criteria. Many lack the tools to streamline this process, leading to inefficiencies.
                         </li>
                         <li>
-                          <b>2. Limitations of Existing Tools:</b> While many course creation platforms are available, most are either 
-                          too complex for beginners or lack automation features that could speed up the content creation process.
+                          <b>2. Inconsistent and Subjective Grading:</b> Manual grading is often subjective and inconsistent, especially when multiple educators are involved. This inconsistency affects fairness and student learning outcomes.
                         </li>
                         <li>
-                          <b>3. Low Engagement:</b> Poorly designed courses tend to fail to capture participants' attention, 
-                          leading to low completion and success rates.
+                          <b>3. Scalability Issues:</b> Large-scale courses struggle with grading assignments promptly. Reviewing thousands of submissions manually is impractical, delaying feedback and hindering student progress.
+                        </li>
+                        <li>
+                          <b>4. Limited AI-Driven Insights:</b> Traditional grading systems lack intelligent analytics that could provide deeper insights into student performance and learning patterns.
                         </li>
                       </ul>
                       <h4 class="card-title">Solutions Offered</h4>
+                      <p>To address these challenges, we designed the AI-Powered Assignment System, which streamlines assignment creation, evaluation, and feedback with intelligent automation:</p>
                       <ul class="list-unstyled">
                         <li>
-                          <b>1. AI Content Creation:</b> AI assists users in generating text,rich-text and quiz content based on 
-                          their chosen topics, allowing course creators to focus on delivering ideas without starting from scratch.
+                          <b>1. AI-Generated Assignments & Rubrics:</b> Educators can quickly generate well-structured assignments and grading rubrics with AI assistance, reducing the time spent on manual creation.
                         </li>
                         <li>
-                          <b>2. Curriculum Recommendations:</b> The AI system analyzes topics and learning objectives to provide 
-                          relevant and structured curriculum suggestions.
+                          <b>2. Automated AI Grading:</b> The system can evaluate thousands of submissions in real time, providing objective, consistent, and transparent grading based on predefined rubrics.
                         </li>
                         <li>
-                          <b>3. Drag-and-Drop Editor:</b> A user-friendly interface allows users to edit and organize course materials 
-                          intuitively, without requiring technical skills.
+                          <b>3. Scalable and Adaptive Feedback:</b> AI not only grades assignments but also offers personalized feedback, helping students understand their strengths and areas for improvement.AI not only grades assignments but also offers personalized feedback, helping students understand their strengths and areas for improvement.
                         </li>
                       </ul>
                       <div class="more-info-block">
                         <h4 class="card-title"><b>Objectives</b></h4>
-                        <p>The goal of this project is to empower educators, training institutions, and individuals to create engaging 
-                          and high-quality online courses efficiently by leveraging AI-driven automation features. The platform provides 
-                          a user-friendly design experience with intuitive interfaces and smart tools that simplify the course creation 
-                          process while optimizing content production through automated curriculum recommendations, content generation, 
-                          and customizable templates, ultimately enabling users to deliver impactful learning experiences in less time.</p>
+                        <p>The goal of this project is to empower educators and institutions by streamlining the assignment creation, evaluation, and feedback process through AI-driven automation. By integrating intelligent grading, rubric generation, and personalized feedback, the system reduces manual workload while ensuring accuracy, consistency, and scalability.</p>
+                        <p>With an intuitive user interface and smart automation tools, educators can effortlessly design assignments, generate structured grading criteria, and assess thousands of submissions in real-time. This not only enhances efficiency but also improves learning outcomes by providing students with instant, data-driven feedback. Ultimately, the AI-Powered Assignment System enables a more effective, fair, and engaging assessment experience for both educators and learners.</p>
                           <div class="more-info-block">
                         <h4 class="card-title"><b>Roles & Responsibilities</b></h4>
-                        <p>As a Product Designer, my role encompasses responsibilities that include UX design for the "Create Course 
-                          With AI" feature on our self-paced learning platform. Below is a detailed overview of my contributions:</p>
-                          <ul class="list-unstyled">
-                            <li>
-                              <b>🗒️ Organizing and Refining Requirements:</b> I was responsible for organizing and synthesizing the 
-                              requirements brief provided by stakeholders. Collaborating closely with the Head of Product, 
-                              Senior Designer, and UI Designer, I conducted brainstorming sessions to map out the logic and 
-                              step-by-step process for the AI-driven course creation feature.
-                            </li>
-                            <li>
-                              <b>🔍 Research and Insights Gathering:</b> To ensure the solution aligns with user needs and industry trends, 
-                              I conducted thorough research on the impact of AI in education, particularly for teachers aiming to create 
-                              online courses. My research sources included articles, blogs, YouTube videos, and news platforms, providing 
-                              a well-rounded perspective on how AI can streamline course creation processes.
-                            </li>
-                            <li>
-                              <b>📊 Competitor Benchmarking:</b> I conducted a comprehensive competitor analysis, examining platforms such 
-                              as Thinkific, Kajabi, Teachable, GetCourse, Course Generator, and LearnWorlds. This benchmarking provided 
-                              valuable insights into industry standards, strengths, and potential areas for differentiation in our product.
-                            </li>
-                            <li>
-                              <b>📲 User Flow and Wireframing:</b> Based on the insights gathered, I designed detailed user flows to ensure 
-                              a seamless and intuitive course creation process. I then developed high-fidelity wireframes to visually 
-                              represent the solution. These deliverables were handed off to the UI Designer for further refinement and 
-                              aesthetic enhancement.
-                            </li>
-                          </ul>
-                          <p>By combining research, collaboration, and design expertise, my role ensured the "Create Course With AI" 
-                            feature was user-centric, strategically aligned, and ready for implementation.</p>
-                            <ul class="list-unstyled">
+                        <p>As a <b>Product Designer</b>, I played a key role in shaping the AI Smart Assignment System, covering both <b>UX and UI design aspects</b>. I began by conducting in-depth research on AI integration in assignment workflows, exploring its feasibility, opportunities, and limitations within edtech. This involved understanding AI’s role in <b>automated grading, rubric generation, and personalized feedback</b>, while also identifying potential challenges such as bias in AI assessments, scalability issues, and regulatory considerations.</p>
+                        <p>To ensure alignment with user needs, I synthesized insights from multiple <b>stakeholder meetings with Eduqat’s C-level team</b>, gathering direct feedback from clients on their frustrations and expectations. From these discussions, I identified critical pain points, mapped AI workflows based on stakeholder assumptions, and refined the solution to ensure both technical viability and educator usability.</p>
+                        <p>Competitor benchmarking was another key part of my role, where I analyzed how leading edtech platforms implemented AI-driven assignment tools. This research helped uncover industry best practices, feature logic, and usability gaps that informed our design strategy.</p>
+                        <p>With these insights, I developed <b>user flows, wireframes, and initial UI designs</b>, ensuring a seamless experience for educators. My work laid the foundation for the <b>AI-powered assignment creation, grading automation, and scalable feedback system</b>, before the final UI refinements were handed off to the dedicated <b>UI Designer</b>.</p>
                         
                     <div class="more-info-block">
                       <h4 class="more-info-title text-primary"><b>1. Discover</b></h4>
