--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,7 @@
                       companies and institutions. Currently I'm diving into front-end coding ⚙️</p>
                       <div class="common-button-groups">
                         <!-- View CV button -->
-                        <a class="btn btn-call" href="https://drive.google.com/file/d/1GmXUGTA0YTMYciLD2jUOUDU6DdOtXLii/view?usp=sharing" target="_blank">
+                        <a class="btn btn-call" href="https://drive.google.com/file/d/1ZLQMZfrSWHhxLieLMj4o6UBsBB3hd8y0/view?usp=sharing" target="_blank">
                           <svg class="icon" width="25" height="24" viewBox="0 0 25 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <!-- Ikon dokumen sebagai pengganti ikon telepon -->
@@ -293,7 +293,7 @@
                           </div>
                           <div class="text">
                             <div class="info">
-                              <a href="portfolio-project-1.html" class="title">Eduqat - AI Course Creation (Self-Paced)</a>
+                              <a href="portfolio-project-1.html" class="title">Eduqat - AI-Powered Course Builder (Self-Paced)</a>
                               <p class="subtitle">Product Design & Research | Dashboard</p>
                             </div>
                             <div class="visite-btn">
@@ -319,7 +319,7 @@
                           </div>
                           <div class="text">
                             <div class="info">
-                              <a href="portfolio-project-2.html" class="title">Eduqat - AI Quiz Creation</a>
+                              <a href="portfolio-project-2.html" class="title">Eduqat - AI Smart Assignments</a>
                               <p class="subtitle">Product Design | Dashboard</p>
                             </div>
                             <div class="visite-btn">
