--- a/portfolio-project-1.html
+++ b/portfolio-project-1.html
@@ -229,7 +229,7 @@
                       companies and institutions. Currently I'm diving into front-end coding ⚙️</p>
                       <div class="common-button-groups">
                         <!-- View CV button -->
-                        <a class="btn btn-call" href="https://drive.google.com/file/d/1GmXUGTA0YTMYciLD2jUOUDU6DdOtXLii/view?usp=sharing" target="_blank">
+                        <a class="btn btn-call" href="https://drive.google.com/file/d/1ZLQMZfrSWHhxLieLMj4o6UBsBB3hd8y0/view?usp=sharing" target="_blank">
                           <svg class="icon" width="25" height="24" viewBox="0 0 25 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <!-- Ikon dokumen sebagai pengganti ikon telepon -->
@@ -310,7 +310,7 @@
                         </div>
                       </div>
                       <div class="overview">
-                        <h4 class="card-title" style="color: #19A2A8;">Eduqat - AI Course Creation (Self-Paced)</h4>
+                        <h4 class="card-title" style="color: #19A2A8;">Eduqat - AI-Powered Course Builder (Self-Paced)</h4>
                         
                         <p>
                           <b>My Role:</b> Product Designer & Researcher
