update code & content part 9.3

--- a/about.html
+++ b/about.html
@@ -366,6 +366,34 @@
                       <div class="col-lg-6">
                         <div class="feedback-item">
                           <div class="profile-section">
+                            <a href="https://www.linkedin.com/in/fatur-ariyan/" target="_blank" class="profile-link">
+                              <img src="assets/img/images/fatur.jpeg" alt="fatur" class="profile-image">
+                              <div class="profile-info">
+                                <p class="profile-name">
+                                  Fatur Ariyan
+                                  <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                                    <rect x="2" y="9" width="4" height="12"></rect>
+                                    <circle cx="4" cy="4" r="2"></circle>
+                                  </svg>
+                                </p>
+                                <p class="profile-position">Sr. Product Designer</p>
+                              </div>
+                            </a>
+                          </div>
+                          <div class="details">
+                            <p>
+                              "Azrul is not only a hardworking individual but also an outstanding communicator. He has the ability to 
+                              convey complex ideas clearly and effectively, making collaboration seamless and enjoyable. 
+                              His attention to detail ensures that nothing goes overlooked, and he approaches each task with a 
+                              meticulous mindset that guarantees high-quality results." <br><br/>
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-6">
+                        <div class="feedback-item">
+                          <div class="profile-section">
                             <a href="https://www.linkedin.com/in/andy-ardana-89193a1a4/" target="_blank" class="profile-link">
                               <img src="assets/img/images/andy.png" alt="andy" class="profile-image">
                               <div class="profile-info">
@@ -377,7 +405,7 @@
                                     <circle cx="4" cy="4" r="2"></circle>
                                   </svg>
                                 </p>
-                                <p class="profile-position">Product Designer at Eduqat</p>
+                                <p class="profile-position">UI Designer</p>
                               </div>
                             </a>
                           </div>
@@ -447,25 +475,27 @@
                       <div class="col-lg-6">
                         <div class="feedback-item">
                           <div class="profile-section">
-                            <a href="https://www.linkedin.com/in/satrioherlambangputra/" target="_blank" class="profile-link">
-                              <img src="assets/img/images/satrio.jpeg" alt="satrio" class="profile-image">
+                            <a href="https://www.linkedin.com/in/melati-octavia22/" target="_blank" class="profile-link">
+                              <img src="assets/img/images/melati.jpeg" alt="melati" class="profile-image">
                               <div class="profile-info">
                                 <p class="profile-name">
-                                  Satrio Herlambang Putra
+                                  Melati Octavia
                                   <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                     <rect x="2" y="9" width="4" height="12"></rect>
                                     <circle cx="4" cy="4" r="2"></circle>
                                   </svg>
                                 </p>
-                                <p class="profile-position">Product Design Lead</p>
+                                <p class="profile-position">Digital Marketer Expert</p>
                               </div>
                             </a>
                           </div>
                           <div class="details">
                             <p>
-                              "Skilled in product design, from in-depth research to high-fidelity prototyping, ensuring user-centric 
-                              and visually compelling solutions." <br><br/> <br><br/> <br><br/> <br><br/>
+                              "If you’re looking for a UX Designer who combines creativity, critical thinking, and strong communication 
+                              skills, Hazrul is the one!. Working together has been inspiring, as they always push boundaries to create 
+                              better experiences. Their ability to analyze problems from different angles and come up with innovative 
+                              solutions is truly admirable. A great teammate and a great professional"
                             </p>
                           </div>
                         </div>
@@ -473,25 +503,27 @@
                       <div class="col-lg-6">
                         <div class="feedback-item">
                           <div class="profile-section">
-                            <a href="https://www.linkedin.com/in/satrioherlambangputra/" target="_blank" class="profile-link">
-                              <img src="assets/img/images/satrio.jpeg" alt="satrio" class="profile-image">
+                            <a href="https://www.linkedin.com/in/choirulgarin/" target="_blank" class="profile-link">
+                              <img src="assets/img/images/garin.jpeg" alt="garin" class="profile-image">
                               <div class="profile-info">
                                 <p class="profile-name">
-                                  Satrio Herlambang Putra
+                                  Choirul Garin Pratama
                                   <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                     <rect x="2" y="9" width="4" height="12"></rect>
                                     <circle cx="4" cy="4" r="2"></circle>
                                   </svg>
                                 </p>
-                                <p class="profile-position">Product Design Lead</p>
+                                <p class="profile-position">Sr. UI/UX Designer</p>
                               </div>
                             </a>
                           </div>
                           <div class="details">
                             <p>
-                              "Skilled in product design, from in-depth research to high-fidelity prototyping, ensuring user-centric 
-                              and visually compelling solutions." <br><br/> <br><br/> <br><br/> <br><br/>
+                              "I had the pleasure of collaborate with Hazrul Aswad, a truly innovative Product Designer and an 
+                              exceptional mentee and now he become mentor. His creative approach to design consistently transforms 
+                              complex challenges into intuitive, user-centric solutions that not only elevate our projects but also 
+                              set a new standard for design excellence. His work results stand out in any competitive market."
                             </p>
                           </div>
                         </div>
