--- a/portfolio-project-1.html
+++ b/portfolio-project-1.html
@@ -372,7 +372,7 @@
                     </script>
                     
                     <div class="more-info-block">
-                      <h4 class="more-info-title" style="color: #212529;"><b>Project Background</b></h4>
+                      <h4 class="more-info-title"><b>Project Background</b></h4>
                       <p>Online education has grown rapidly in recent years, providing greater access for individuals to learn anytime 
                         and anywhere. However, creating high-quality online courses remains a significant challenge for many individuals 
                         and educational institutions. This is primarily due to the complexity of course creation, the need for effective 
