--- a/services.html
+++ b/services.html
@@ -469,24 +469,51 @@
                         <div class="feedback-item">
                           <div class="profile-section">
                             <a href="https://www.linkedin.com/in/oliverclain" target="_blank" class="profile-link">
-                              <img src="path/to/oliver-clain-profile.jpg" alt="Oliver Clain" class="profile-image">
+                              <img src="assets/img/images/wahyu.jpeg" alt="wahyu" class="profile-image">
                               <div class="profile-info">
                                 <p class="profile-name">
-                                  Oliver Clain 
+                                  Wahyu Andriyanto
                                   <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                     <rect x="2" y="9" width="4" height="12"></rect>
                                     <circle cx="4" cy="4" r="2"></circle>
                                   </svg>
                                 </p>
-                                <p class="profile-position">Product Designer</p>
+                                <p class="profile-position">front-end Developer</p>
                               </div>
                             </a>
                           </div>
                           <div class="details">
                             <p>
-                              "We've been using BentoFolio for over a year now, and I must say, it's been a game-changer
-                              for us. The user interface is intuitive and the feature.
+                              "A highly skilled UX designer with an incredible ability to create intuitive and user-friendly experiences. 
+                              Attention to detail, creativity, and collaborative approach make working together seamless and enjoyable. 
+                              Highly recommended! <br><br><br><br><br><br><br>
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-6">
+                        <div class="feedback-item">
+                          <div class="profile-section">
+                            <a href="https://www.linkedin.com/in/qutek/" target="_blank" class="profile-link">
+                              <img src="assets/img/images/lafif.jpeg" alt="wahyu" class="profile-image">
+                              <div class="profile-info">
+                                <p class="profile-name">
+                                  Lafif Astahdziq
+                                  <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                                    <rect x="2" y="9" width="4" height="12"></rect>
+                                    <circle cx="4" cy="4" r="2"></circle>
+                                  </svg>
+                                </p>
+                                <p class="profile-position">Lead Developer</p>
+                              </div>
+                            </a>
+                          </div>
+                          <div class="details">
+                            <p>
+                              "I highly recommend Hazrul! He's not only a talented UX designer but also an amazing presenter. 
+                              His friendly approach makes collaboration a breeze. Always a pleasure to work with him! <br><br><br><br><br><br><br><br>
                             </p>
                           </div>
                         </div>
