--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Azrul's Portfolio</title>
+  <title>Azrul Portfolio</title>
   <meta name="description" content="Azrul Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -41,7 +41,7 @@
                     </clipPath>
                   </defs>
                 </svg>
-                <span>Azrul's<span class="primary">Portfolio</span></span>
+                <span>Azrul<span class="primary">Portfolio</span></span>
               </a>
             </div>
             <div class="navbar-main d-flex flex-grow-1">
@@ -52,7 +52,7 @@
                       d="M0 1.5C0 1.10218 0.158035 0.720644 0.43934 0.43934C0.720644 0.158035 1.10218 0 1.5 0L9 0C9.39782 0 9.77936 0.158035 10.0607 0.43934C10.342 0.720644 10.5 1.10218 10.5 1.5V22.5C10.5 22.8978 10.342 23.2794 10.0607 23.5607C9.77936 23.842 9.39782 24 9 24H1.5C1.10218 24 0.720644 23.842 0.43934 23.5607C0.158035 23.2794 0 22.8978 0 22.5V1.5ZM13.5 1.5C13.5 1.10218 13.658 0.720644 13.9393 0.43934C14.2206 0.158035 14.6022 0 15 0L22.5 0C22.8978 0 23.2794 0.158035 23.5607 0.43934C23.842 0.720644 24 1.10218 24 1.5V9C24 9.39782 23.842 9.77936 23.5607 10.0607C23.2794 10.342 22.8978 10.5 22.5 10.5H15C14.6022 10.5 14.2206 10.342 13.9393 10.0607C13.658 9.77936 13.5 9.39782 13.5 9V1.5ZM13.5 15C13.5 14.6022 13.658 14.2206 13.9393 13.9393C14.2206 13.658 14.6022 13.5 15 13.5H22.5C22.8978 13.5 23.2794 13.658 23.5607 13.9393C23.842 14.2206 24 14.6022 24 15V22.5C24 22.8978 23.842 23.2794 23.5607 23.5607C23.2794 23.842 22.8978 24 22.5 24H15C14.6022 24 14.2206 23.842 13.9393 23.5607C13.658 23.2794 13.5 22.8978 13.5 22.5V15Z"
                       class="logo-icon" />
                   </svg>
-                  <span>Azrul's<span class="primary">Portfolio</span></span>
+                  <span>Azrul<span class="primary">Portfolio</span></span>
                 </a>
               </div>
               <ul class="navbar-info mx-auto">
@@ -226,7 +226,7 @@
                     <p>A Passionate <span>Product Designer</span> 🖥️ & <span>Design Mentor</span> that having more than
                       <span>4
                         years</span> of working experiences over some
-                      companies and institutions. Currently I'm diving into front-end coding ⚙️</p>
+                      companies and institutions. Currently I'm diving into front-end coding ⚙️. Available for remote work!</p>
                     <div class="common-button-groups">
                       <a class="btn btn-call" href="https://drive.google.com/file/d/1ZLQMZfrSWHhxLieLMj4o6UBsBB3hd8y0/view?usp=sharing" target="_blank">
                         <svg class="icon" width="25" height="24" viewBox="0 0 25 24" fill="none"
@@ -515,7 +515,7 @@
     <footer class="footer-area">
       <div class="container">
         <div class="text text-center">
-          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Jan 2025)</i></p>
+          <p>@ azrul portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Jan 2025)</i></p>
         </div>
       </div>
     </footer>
