--- a/portfolio-project-1.html
+++ b/portfolio-project-1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Azrul's Portfolio</title>
+  <title>Azrul Portfolio</title>
   <meta name="description" content="Azrul Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -36,7 +36,7 @@
                     d="M0 1.5C0 1.10218 0.158035 0.720644 0.43934 0.43934C0.720644 0.158035 1.10218 0 1.5 0L9 0C9.39782 0 9.77936 0.158035 10.0607 0.43934C10.342 0.720644 10.5 1.10218 10.5 1.5V22.5C10.5 22.8978 10.342 23.2794 10.0607 23.5607C9.77936 23.842 9.39782 24 9 24H1.5C1.10218 24 0.720644 23.842 0.43934 23.5607C0.158035 23.2794 0 22.8978 0 22.5V1.5ZM13.5 1.5C13.5 1.10218 13.658 0.720644 13.9393 0.43934C14.2206 0.158035 14.6022 0 15 0L22.5 0C22.8978 0 23.2794 0.158035 23.5607 0.43934C23.842 0.720644 24 1.10218 24 1.5V9C24 9.39782 23.842 9.77936 23.5607 10.0607C23.2794 10.342 22.8978 10.5 22.5 10.5H15C14.6022 10.5 14.2206 10.342 13.9393 10.0607C13.658 9.77936 13.5 9.39782 13.5 9V1.5ZM13.5 15C13.5 14.6022 13.658 14.2206 13.9393 13.9393C14.2206 13.658 14.6022 13.5 15 13.5H22.5C22.8978 13.5 23.2794 13.658 23.5607 13.9393C23.842 14.2206 24 14.6022 24 15V22.5C24 22.8978 23.842 23.2794 23.5607 23.5607C23.2794 23.842 22.8978 24 22.5 24H15C14.6022 24 14.2206 23.842 13.9393 23.5607C13.658 23.2794 13.5 22.8978 13.5 22.5V15Z"
                     class="logo-icon" />
                 </svg>
-                <span>Azrul's<span class="primary">Portfolio</span></span>
+                <span>Azrul<span class="primary">Portfolio</span></span>
               </a>
             </div>
             <div class="navbar-main d-flex flex-grow-1">
@@ -52,7 +52,7 @@
                       </clipPath>
                     </defs>
                   </svg>
-                  <span>Azrul's<span class="primary">Portfolio</span></span>
+                  <span>Azrul<span class="primary">Portfolio</span></span>
                 </a>
               </div>
               <ul class="navbar-info mx-auto">
@@ -226,7 +226,7 @@
                     <p>A Passionate <span>Product Designer</span> 🖥️ & <span>Design Mentor</span> that having more than
                       <span>4
                         years</span> of working experiences over some
-                      companies and institutions. Currently I'm diving into front-end coding ⚙️</p>
+                      companies and institutions. Currently I'm diving into front-end coding ⚙️. Available for remote work!</p>
                       <div class="common-button-groups">
                         <!-- View CV button -->
                         <a class="btn btn-call" href="https://drive.google.com/file/d/1ZLQMZfrSWHhxLieLMj4o6UBsBB3hd8y0/view?usp=sharing" target="_blank">
@@ -997,7 +997,7 @@
                     <h4 class="card-title"><b>Let's Breakdown The UI's
                     </b></h4>
                     <h5 class="more-info-subtitle" style="margin-bottom: 15px;">1. Product Library Interface | Self-Paced</h5>
-                    <p>Isi deskripsi tentang tampilan nya disini.
+                    <p>The Product Library serves as the main dashboard that displays all created course products in the form of product cards. Each card includes key course information, settings, course management options, and publication status. We’ve added multiple call-to-action buttons to make it easier for educators, especially those who may not be tech-savvy, to navigate and use the available features effectively.
                     </p>
 
                         <div class="main-image" style="margin-bottom: 20px;">
@@ -1008,8 +1008,8 @@
                                data-bs-target="#imageModal">
                            </div>
                            
-                           <h5 class="more-info-subtitle" style="margin-bottom: 15px;">2. Modal Pop up - Create New Product Interface</h5>
-                           <p>Isi deskripsi tentang tampilan nya disini.
+                           <h5 class="more-info-subtitle" style="margin-bottom: 15px;">2. Add New Product: Initial Modal</h5>
+                           <p>When users click the "Add New Product" icon from the sidebar, a modal window appears where they can enter the course title and choose the type of course they want to create. This marks the first step in the product creation process.
                            </p>                         
                             <div class="main-image" style="margin-bottom: 20px;">
                               <img src="assets/img/ai-course-creation/ai1.png"
@@ -1019,8 +1019,8 @@
                                data-bs-target="#imageModal">
                               </div>
 
-                              <h5 class="more-info-subtitle" style="margin-bottom: 15px;">3. Modal Pop up - Create With Smart Ai</h5>
-                           <p>Isi deskripsi tentang tampilan nya disini.
+                              <h5 class="more-info-subtitle" style="margin-bottom: 15px;">3. Self-Paced Course: Method Selection Modal</h5>
+                           <p>This is the next step after selecting the self-paced course type. Users are presented with two options, either start from a blank template or use AI to assist with course creation. The same modal will also appear if the user is already in the self-paced product library and decides to create a new course.
                            </p>                         
                             <div class="main-image" style="margin-bottom: 20px;">
                               <img src="assets/img/ai-course-creation/ai2.png"
@@ -1029,6 +1029,8 @@
                                data-bs-toggle="modal" 
                                data-bs-target="#imageModal">
                               </div>
+                              <p>If the user selects the AI-assisted method, this modal allows them to provide additional details such as the number of chapters, course level, preferred language, and whether to include quizzes and assignments. These inputs help the AI generate a course structure that fits their needs.
+                              </p> 
 
                               <div class="main-image" style="margin-bottom: 20px;">
                                 <img src="assets/img/ai-course-creation/ai3.png"
@@ -1038,8 +1040,8 @@
                                  data-bs-target="#imageModal">
                                 </div>
 
-                              <h5 class="more-info-subtitle" style="margin-bottom: 15px;">4. Curriculum Builder - Contents are Completely Generated</h5>
-                           <p>Isi deskripsi tentang tampilan nya disini.
+                              <h5 class="more-info-subtitle" style="margin-bottom: 15px;">4. AI Content Generation in Progress</h5>
+                           <p>After entering all the required information, the AI begins generating the course content. During this process, a loading screen is shown to inform the user that content is being prepared.
                            </p>                         
                             <div class="main-image" style="margin-bottom: 20px;">
                               <img src="assets/img/ai-course-creation/ai4.png"
@@ -1048,6 +1050,10 @@
                                data-bs-toggle="modal" 
                                data-bs-target="#imageModal">
                               </div>
+
+                              <p>Once the AI finishes, the user is presented with a structured syllabus organized by chapters. At this point, the content for each topic is still minimal. Users can add more information manually or use the built-in AI tool to expand each section.
+                              </p>
+
                               <div class="main-image" style="margin-bottom: 20px;">
                                 <img src="assets/img/ai-course-creation/ai5.png"
                                  alt="ai5"
@@ -1056,8 +1062,8 @@
                                  data-bs-target="#imageModal">
                                 </div>
 
-                              <h5 class="more-info-subtitle" style="margin-bottom: 15px;">5. Material Lesson | Open Rich-Text Material</h5>
-                           <p>Isi deskripsi tentang tampilan nya disini.
+                              <h5 class="more-info-subtitle" style="margin-bottom: 15px;">5. Rich-text Material Editor (Empty State)</h5>
+                           <p>In this example, the user has opened one of the course materials in the rich-text editor, which currently has no content. To address this, we provide an AI writing tool that can generate relevant content based on the title or customized inputs from the user.
                            </p>                         
                             <div class="main-image" style="margin-bottom: 20px;">
                               <img src="assets/img/ai-course-creation/ai6.png"
@@ -1067,8 +1073,8 @@
                                data-bs-target="#imageModal">
                               </div>
 
-                              <h5 class="more-info-subtitle" style="margin-bottom: 15px;">6. Rich-Text Material | Add Content Details Using Smart Ai</h5>
-                           <p>Isi deskripsi tentang tampilan nya disini.
+                              <h5 class="more-info-subtitle" style="margin-bottom: 15px;">6. Generated Rich-text Content (Preview)</h5>
+                           <p>This is a sample of content produced using the AI assistant. It gives a quick and relevant draft that matches the user's input, helping them move forward more efficiently with course development.
                            </p>                         
                             <div class="main-image" style="margin-bottom: 20px;">
                               <img src="assets/img/ai-course-creation/ai7.png"
@@ -1221,7 +1227,7 @@
     <footer class="footer-area">
       <div class="container">
         <div class="text text-center">
-          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Jan 2025)</i></p>
+          <p>@ azrul portfolio 2025, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on march 2025)</i></p>
         </div>
       </div>
     </footer>
