--- a/portfolio-project-1.html
+++ b/portfolio-project-1.html
@@ -31,10 +31,12 @@
           <div class="menu-container">
             <div class="logo">
               <a class="navbar-brand me-0" href="index.html">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M0 1.5C0 1.10218 0.158035 0.720644 0.43934 0.43934C0.720644 0.158035 1.10218 0 1.5 0L9 0C9.39782 0 9.77936 0.158035 10.0607 0.43934C10.342 0.720644 10.5 1.10218 10.5 1.5V22.5C10.5 22.8978 10.342 23.2794 10.0607 23.5607C9.77936 23.842 9.39782 24 9 24H1.5C1.10218 24 0.720644 23.842 0.43934 23.5607C0.158035 23.2794 0 22.8978 0 22.5V1.5ZM13.5 1.5C13.5 1.10218 13.658 0.720644 13.9393 0.43934C14.2206 0.158035 14.6022 0 15 0L22.5 0C22.8978 0 23.2794 0.158035 23.5607 0.43934C23.842 0.720644 24 1.10218 24 1.5V9C24 9.39782 23.842 9.77936 23.5607 10.0607C23.2794 10.342 22.8978 10.5 22.5 10.5H15C14.6022 10.5 14.2206 10.342 13.9393 10.0607C13.658 9.77936 13.5 9.39782 13.5 9V1.5ZM13.5 15C13.5 14.6022 13.658 14.2206 13.9393 13.9393C14.2206 13.658 14.6022 13.5 15 13.5H22.5C22.8978 13.5 23.2794 13.658 23.5607 13.9393C23.842 14.2206 24 14.6022 24 15V22.5C24 22.8978 23.842 23.2794 23.5607 23.5607C23.2794 23.842 22.8978 24 22.5 24H15C14.6022 24 14.2206 23.842 13.9393 23.5607C13.658 23.2794 13.5 22.8978 13.5 22.5V15Z"
-                    class="logo-icon" />
+                <svg class="logo-svg" width="28" height="28" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <rect class="logo-icon" width="48" height="48" rx="12" fill="currentColor"/>
+                  <path class="logo-path" d="M15.946 9L28.6295 9L28.6865 9.42351L24.0705 16.148L15.946 9Z" fill="currentColor"/>
+                  <path class="logo-path" d="M28.6296 9L23.8994 15.9525L32.7327 38.943L40.229 38.943L28.6296 9Z" fill="currentColor"/>
+                  <path class="logo-path" d="M17.232 39H8L28.6294 9L31.8777 17.5158L17.232 39Z" fill="currentColor"/>
+                  <path class="logo-path" d="M26.8058 38.9431L19.3405 32.3325H37.6681L40.2288 38.9431H26.8058Z" fill="currentColor"/>
                 </svg>
                 <span>Azrul<span class="primary">Portfolio</span></span>
               </a>
@@ -229,7 +231,7 @@
                       companies and institutions. Currently I'm diving into front-end coding ⚙️. Available for remote work!</p>
                       <div class="common-button-groups">
                         <!-- View CV button -->
-                        <a class="btn btn-call" href="https://drive.google.com/file/d/1ZLQMZfrSWHhxLieLMj4o6UBsBB3hd8y0/view?usp=sharing" target="_blank">
+                        <a class="btn btn-call" href="https://drive.google.com/file/d/1XYn5pSUv1kmqnU5sLpzgNS1RO5o760jT/view?usp=drive_link" target="_blank">
                           <svg class="icon" width="25" height="24" viewBox="0 0 25 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <!-- Ikon dokumen sebagai pengganti ikon telepon -->
@@ -318,7 +320,7 @@
                         </p>
                         <p><b>Team Contributor:</b> 1 Head of Product, 1 PM, 2 Product Designers, 1 UI Designer, 2 UATs, and 
                           4 Developers.</p>
-                        <p> <b>Project Duration:</b> 3-6 Months</p>
+                        <p> <b>Project Duration:</b> 2-3 Months</p>
                         <p><b>Status:</b> <span style="color: #09bd69;">Development Success</span></p>
                       </div>
                     </div>
@@ -994,6 +996,7 @@
                       });
                   });
                   </script>
+                  
                     <h4 class="card-title"><b>Let's Breakdown The UI's
                     </b></h4>
                     <h5 class="more-info-subtitle" style="margin-bottom: 15px;">1. Product Library Interface | Self-Paced</h5>
